checkboxes: fixed wrapping

--- a/checkboxes/1.0.0/less/module-mixins.less
+++ b/checkboxes/1.0.0/less/module-mixins.less
@@ -64,6 +64,7 @@
 			padding-left: 38px;
 			display: table-cell;
 			vertical-align: middle;
+			white-space: normal;
 
 			&:hover {
 				cursor: pointer;
