--- a/checkboxes/1.0.0/tests/BOM/assets/less/gui.less
+++ b/checkboxes/1.0.0/tests/BOM/assets/less/gui.less
@@ -1415,7 +1415,7 @@
 /*
  * checkboxes mixins
  *
- * checkboxes with flexbox enhancements
+ * checkboxes
  *
  */
 
@@ -1477,6 +1477,7 @@
 			padding-left: 38px;
 			display: table-cell;
 			vertical-align: middle;
+			white-space: normal;
 
 			&:hover {
 				cursor: pointer;
